make java 26 vector and shenandoah checks executable